fixed another error where the data from the api was missing, and fixed a few mobile layout bugs

--- a/src/pages/details/components/borderButtons.css
+++ b/src/pages/details/components/borderButtons.css
@@ -39,4 +39,17 @@
   .border-wrapper a:hover {
     background-color: var(--Elements);
   }
+
+  .border-wrapper {
+    align-self: center;
+  }
+
+  .border-wrapper p {
+    align-self: center;
+  }
+
+  .border-wrapper div {
+    max-width: 400px;
+    justify-content: center;
+  }
 }
