--- a/src/pages/details/details.css
+++ b/src/pages/details/details.css
@@ -60,20 +60,18 @@
 }
 
 .flag {
-  display: flex;
-  align-items: center;
   width: 50%;
 }
 
 .flag img {
-  width: 85%;
+  width: 90%;
   box-shadow: 0 0 20px 5px var(--Shadow);
   object-fit: contain;
-  object-position: left;
 }
 
 .details {
   width: 50%;
+  padding-left: 30px;
   color: var(--Text);
   display: flex;
   flex-direction: column;
@@ -82,7 +80,6 @@
 }
 
 .details-wrapper {
-  height: 150px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -136,6 +133,7 @@
 @media (max-width: 1070px) {
   .extra-details-container {
     flex-direction: column;
+    align-items: center;
   }
 
   .flag img {
@@ -151,15 +149,22 @@
 
   .details {
     width: 100%;
+    max-width: 400px;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 15px;
+    padding: 0;
+  }
+
+  .details h2 {
+    text-align: center;
   }
 
   .details-wrapper {
     flex-wrap: nowrap;
     height: auto;
+    padding-left: 30px;
   }
 
   .back-button-container button:hover {
